# kryptokrona

./: .appveyor.yml  .dockerignore  .gitignore  .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  Cargo.toml  Dockerfile  Dockerfile.dev  Dockerfile.test  LICENSE  Makefile  README.md  SECURITY.md  build-release.sh  build.sh  docker-compose.yml  docker-entrypoint.sh  hello-tj.md  miner-cron  multi_installer.sh  remove-testnet.sh  setup-testnet.sh  start-testnet.sh  start.sh  testnet.yml  timestamp.txt  wait-for-it.sh
src/: CMakeLists.txt  Cargo.toml  CryptoNoteCheckpoints.h  CryptoNoteConfig.h  build.rs  version.cmake  version.h.in
src/BinaryInfo/: daemon.rc  miner.rc  poolwallet.rc  service.rc  simplewallet.rc  walletapi.rc  walletd.rc  zedwallet.rc
src/BlockchainExplorer/: BlockchainExplorer.cpp  BlockchainExplorer.h  BlockchainExplorerErrors.cpp
src/Common/: ArrayRef.h  ArrayView.h  Base58.cpp  Base58.h  BlockingQueue.cpp  BlockingQueue.h  ConsoleHandler.cpp  ConsoleHandler.h  ConsoleTools.cpp  FileMappedVector.cpp  FileMappedVector.h  FileSystemShim.h  FormatTools.cpp  FormatTools.h  IInputStream.h  IOutputStream.h  JsonValue.cpp  JsonValue.h  Math.cpp  Math.h  MemoryInputStream.cpp  MemoryInputStream.h  PathTools.cpp  PathTools.h  ScopeExit.cpp  ScopeExit.h  ShuffleGenerator.h  SignalHandler.cpp  SignalHandler.h  StdInputStream.cpp  StdInputStream.h  StdOutputStream.cpp  StdOutputStream.h  StreamTools.cpp  StreamTools.h  StringBuffer.h  StringInputStream.cpp  StringInputStream.h  StringOutputStream.cpp  StringOutputStream.h  (+8 more)
src/ConnectivityTool/: ConnectivityTool.cpp
src/CryptoNoteCore/: Account.cpp  Account.h  AddBlockErrors.cpp  BlockValidationErrors.cpp  BlockValidationErrors.h  BlockchainCache.cpp  BlockchainCache.h  BlockchainMessages.cpp  BlockchainReadBatch.cpp  BlockchainReadBatch.h  BlockchainStorage.h  BlockchainUtils.cpp  BlockchainWriteBatch.cpp  BlockchainWriteBatch.h  CachedBlock.cpp  CachedBlock.h  CachedTransaction.cpp  CachedTransaction.h  CheckDifficulty.cpp  CheckDifficulty.h  Checkpoints.cpp  Checkpoints.h  Core.cpp  Core.h  CoreErrors.cpp  CoreStatistics.h  CryptoNoteBasicImpl.cpp  CryptoNoteBasicImpl.h  CryptoNoteFormatUtils.cpp  CryptoNoteFormatUtils.h  CryptoNoteSerialization.cpp  CryptoNoteSerialization.h  CryptoNoteTools.cpp  CryptoNoteTools.h  Currency.cpp  Currency.h  DBUtils.cpp  DBUtils.h  DataBaseConfig.cpp  DataBaseConfig.h  (+62 more)
src/CryptoNoteProtocol/: CryptoNoteProtocolDefinitions.h  CryptoNoteProtocolHandler.cpp  CryptoNoteProtocolHandler.h  ICryptoNoteProtocolQuery.h
src/CryptoTest/: main.cpp
src/Daemon/: Daemon.cpp  DaemonCommandsHandler.cpp  DaemonCommandsHandler.h  DaemonConfiguration.cpp  DaemonConfiguration.h  daemon_commands_handler.cpp
src/Errors/: Errors.cpp  Errors.h  ValidateParameters.cpp  ValidateParameters.h  validate_parameters.cpp  validate_parameters.h
src/HTTP/: HttpParser.cpp  HttpParser.h  HttpParserErrorCodes.cpp  HttpParserErrorCodes.h  HttpRequest.cpp  HttpRequest.h  HttpResponse.cpp  HttpResponse.h
src/InProcessNode/: InProcessNode.cpp  InProcessNode.h
src/JsonRpcServer/: JsonRpcServer.cpp  JsonRpcServer.h
src/Logging/: CommonLogger.cpp  CommonLogger.h  ConsoleLogger.cpp  ConsoleLogger.h  DummyLogger.h  FileLogger.cpp  FileLogger.h  ILogger.cpp  ILogger.h  LoggerGroup.cpp  LoggerGroup.h  LoggerManager.cpp  LoggerManager.h  LoggerMessage.cpp  LoggerMessage.h  LoggerRef.cpp  LoggerRef.h  StreamLogger.cpp  StreamLogger.h
src/Miner/: BlockchainMonitor.cpp  BlockchainMonitor.h  Miner.cpp  Miner.h  MinerEvent.h  MinerManager.cpp  MinerManager.h  MiningConfig.cpp  MiningConfig.h  blockchain_monitor.cpp  main.cpp  miner_manager.cpp  miner_manager.h  mining_config.cpp
src/Mnemonics/: CMakeCache.txt  CRC32.h  Mnemonics.cpp  Mnemonics.h  WordList.h  electrum-words.cpp  electrum-words.h
src/Nigel/: Nigel.cpp  Nigel.h
src/NodeRpcProxy/: NodeErrors.cpp  NodeErrors.h  NodeRpcProxy.cpp  NodeRpcProxy.h
src/P2p/: ConnectionContext.h  IP2pNodeInternal.h  LevinProtocol.cpp  LevinProtocol.h  NetNode.cpp  NetNode.h  NetNodeCommon.h  NetNodeConfig.cpp  NetNodeConfig.h  P2pConnectionProxy.cpp  P2pConnectionProxy.h  P2pContext.cpp  P2pContext.h  P2pInterfaces.h  P2pNetworks.h  P2pNode.cpp  P2pNode.h  P2pNodeConfig.cpp  P2pNodeConfig.h  P2pProtocolDefinitions.h  P2pProtocolTypes.h  PeerListManager.cpp  PeerListManager.h  Peerlist.h  PendingLiteBlock.h
src/PaymentGate/: NodeFactory.cpp  PaymentServiceJsonRpcMessages.cpp  PaymentServiceJsonRpcMessages.h  PaymentServiceJsonRpcServer.cpp  PaymentServiceJsonRpcServer.h  WalletService.cpp  WalletService.h
src/PaymentGateService/: ConfigurationManager.cpp  ConfigurationManager.h  PaymentGateService.cpp  PaymentServiceConfiguration.cpp  PaymentServiceConfiguration.h  RpcNodeConfiguration.cpp
src/PoolWallet/: PasswordContainer.cpp  PasswordContainer.h  PoolWallet.cpp  PoolWallet.h
src/Rpc/: CoreRpcServerCommandsDefinitions.h  HttpClient.cpp  HttpClient.h  HttpServer.cpp  HttpServer.h  JsonRpc.cpp  JsonRpc.h  RpcServer.cpp  RpcServer.h  RpcServerConfig.cpp
src/Serialization/: BinaryInputStreamSerializer.cpp  BinaryInputStreamSerializer.h  BinaryOutputStreamSerializer.cpp  BinaryOutputStreamSerializer.h  BinarySerializationTools.h  BlockchainExplorerDataSerialization.cpp  ISerializer.h  IStream.h  JsonInputStreamSerializer.h  JsonInputValueSerializer.cpp  JsonInputValueSerializer.h  JsonOutputStreamSerializer.cpp  JsonOutputStreamSerializer.h  KVBinaryInputStreamSerializer.cpp  KVBinaryInputStreamSerializer.h  KVBinaryOutputStreamSerializer.cpp  KVBinaryOutputStreamSerializer.h  MemoryStream.h  SerializationOverloads.cpp  SerializationOverloads.h  SerializationTools.h
src/SimpleWallet/: Commands.cpp  Commands.h  Fusion.cpp  Open.cpp  Open.h  ParseArguments.cpp  ParseArguments.h  PasswordContainer.cpp  PasswordContainer.h  SimpleWallet.cpp  SimpleWallet.h  Sync.cpp  Sync.h  Tools.cpp  Tools.h  Transfer.cpp  Transfer.h
src/SubWallets/: SubWallet.cpp  SubWallet.h  SubWallets.cpp  SubWallets.h
src/System/: Context.h  ContextGroup.cpp  ContextGroupTimeout.h  Event.cpp  (+11 more)
(+1457 files in other folders)
